--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,75 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/motion_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    app:layoutDescription="@xml/scene_transition">
+    android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/toolbar_background"
-        android:layout_height="200dp"
-        android:layout_width="0dp"
-        android:background="@color/colorPrimary"/>
-    
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:src="@drawable/ic_sample_image"
-        android:importantForAccessibility="no"/>
-
-    <TextView
-        android:id="@+id/title"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/motion_layout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title Text"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"/>
+        android:text="Motion Layout"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/collapsible_toolbar_button"/>
 
-    <TextView
-        android:id="@+id/subtitle"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/collapsible_toolbar_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subtitle Text"
-        android:textColor="@android:color/white"/>
-    
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:text="Collapsible Toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_background">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Tab 1"/>
-        <com.google.android.material.tabs.TabItem
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Tab 2"/>
-        <com.google.android.material.tabs.TabItem
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Tab 3"/>
-        <com.google.android.material.tabs.TabItem
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Tab 4"/>
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:layout_constraintTop_toBottomOf="@id/motion_layout_button"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
